--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(mignon-grind-by-weight
     src/estimators/linear_fitting.c
     src/estimators/median.c
     deps/pico-ssd1306/ssd1306.c
-    deps/exceptions4c/src/e4c.c
+    deps/exceptions4c/lite/src/e4c_lite.c
     deps/hx711-pico-c/src/common.c
     deps/hx711-pico-c/src/hx711.c
     deps/hx711-pico-c/src/util.c)
@@ -23,7 +23,7 @@ add_executable(mignon-grind-by-weight
 #target_compile_definitions(mignon-grind-by-weight PRIVATE E4C_THREADSAFE)
 
 target_include_directories(mignon-grind-by-weight PRIVATE deps/)
-target_include_directories(mignon-grind-by-weight PRIVATE deps/exceptions4c/src)
+target_include_directories(mignon-grind-by-weight PRIVATE deps/exceptions4c/lite/src/)
 target_include_directories(mignon-grind-by-weight PRIVATE deps/hx711-pico-c/include)
 target_include_directories(mignon-grind-by-weight PRIVATE deps/pico-ssd1306)
 target_include_directories(mignon-grind-by-weight PRIVATE include/)
