--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "deps/hx711-pico-c"]
 	path = deps/hx711-pico-c
 	url = https://github.com/endail/hx711-pico-c
+[submodule "deps/sh1107-pico-c"]
+	path = deps/sh1107-pico-c
+	url = git@github.com:YanayGoor/sh1107-pico-c.git
